crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_pilot_unconscious.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 2089
expression: screen
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████│║██████████║│██████████││██████████││ █░░░░░   ** UNCONSCIOUS **  wake 3+  │
│I 10/10   ││R 6/6     │║R 6/6     ║│R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████│║██████████║│██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   │║I 10/10   ║│I 10/10   ││          ││ ** IMMOBILE **  pilot out            │
│          ││██████████│║██████████║│██████████││          ││ stationary  TMM -4   [v]             │
│          ││          │║          ║│          ││          ││ standing   PSR 6+                    │
│          ││          │║          ║│          ││          │└──────────────────────────────────────┘
│          ││          │║          ║│          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Pilot knocked out | Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
