crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_quad_doll.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1138
expression: screen
---
  1:Goliath
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌FLL───────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌FRL───────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████│║██████████║│██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     │║R 6/6     ║│R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████│║██████████║│██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   │║I 10/10   ║│I 10/10   ││          ││ Walk 3  Run 5  Jump 0                │
│          ││██████████│║██████████║│██████████││          ││ stationary   [v]                     │
│          ││          │║          ║│          ││          ││ standing                             │
│          ││          │║          ║│          ││          │└──────────────────────────────────────┘
│          ││          │║          ║│          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
┌RLL───────┐                                    ┌RRL───────┐│                                      │
│A 20/20   │                                    │A 20/20   ││                                      │
│██████████│                                    │██████████││                                      │
│I 10/10   │                                    │I 10/10   ││                                      │
│██████████│                                    │██████████││                                      │
│          │                                    │          ││                                      │
│          │                                    │          ││                                      │
└──────────┘                                    └──────────┘└──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
