crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_rename_modal.snap
---
source: crates/app/src/tui/mod.rs
expression: render(&mut app)
---
 Sessions — current: default
▶   CL  Friday Game  (4)  Atlas, Locust +2










                    ╔ Input ═══════════════════════════════════════════════════╗
                    ║Rename 'Friday Game' to:                                  ║
                    ║Friday Night█                                             ║
                    ║Enter = ok    Esc = cancel                                ║
                    ╚══════════════════════════════════════════════════════════╝












 [↑↓] sel  [Enter] load  [n] new  [A] AS  [O] OV  [B] SBF  [F] BF  [r] rename  [D] del  [Esc] back
