crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_sbf_aero_crash_badge.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ FORMATIONS · Round 0 · PV 40 ──┐╔ Squadron 1 ══════════════════╗┌ Flight 1 ──────────────────────┐
│▶ Squadron 1                    │║▶ Flight 1 ×2 CRASHES (End Pha║│AS SZ2  MV 10a                  │
│    SZ2 MV10a SK4  Normal       │║    A ████████ 5/5 D2/2/1     ║│Skill 4  PV 20                  │
│                                │║    crits DMG 0  TGT 0  MP 10 ║│Dmg  S2 M2 L1 E1                │
│                                │║                              ║│BOMB FUEL                       │
│                                │║  Flight 2 ×2                 ║│                                │
│                                │║    A ████████ 5/5 D2/2/1     ║│Alpha Strike Elements           │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│ 1 Visigoth C               SK4 │
│                                │║                              ║│ 2 Visigoth C               SK4 │
│                                │║                              ║│                                │
│                                │║                              ║│To-Hit 5+  (Medium vs TMM0)     │
│                                │║                              ║│                                │
│                                │║                              ║│Formation  Normal               │
│                                │║                              ║│TAC 0  MOR 7  PV 40             │
│                                │║                              ║│BOMB FUEL                       │
│                                │║                              ║│bombs: −1 Thrust each (min 1)   │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
└────────────────────────────────┘╚══════════════════════════════╝└────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  t:to-hit  m:morale  n:round  e:done  g:group  r:rename  ,/.:form  ?:help
