crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_sbf_fresh_sheet_renders_empty_formation.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ FORMATIONS · Round 0 · PV 0 ───┐╔ Formation 1 ═════════════════╗┌ Formation 1 ───────────────────┐
│▶ Formation 1                   │║(no units — [g] to assign)    ║│no unit selected                │
│    (no units — [g] to assign)  │║                              ║│                                │
│  +1 ungrouped — [g] to assign  │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
└────────────────────────────────┘╚══════════════════════════════╝└────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  t:to-hit  m:morale  n:round  e:done  g:group  r:rename  ,/.:form  ?:help
