crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_sbf_group_editor.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ FORMATIONS · Round 0 · PV 138 ─┐╔ Company 1 ═══════════════════╗┌ Lance 1 ───────────────────────┐
│▶ Company 1                     │║▶ Lance 1 ×4                  ║│BM SZ4  MV 3  TMM 1             │
│    SZ4 TMM1 MV3 SK4  Normal    │║    A ████████ 25/25 D7/7/3   ║│Skill 4  PV 69                  │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│Dmg  S7 M7 L3 E2                │
│                                │║                              ║│FLK IF                          │
│                                │║  Lance 2 ×4                  ║│                                │
│                                │║    A ████████ 25/25 D7/7/3   ║│Alpha Strike Elements           │
│                                │║    crits DMG 0  TGT 0  MP 0  ║│ 1 Atlas AS7-D              SK4 │
│                ╔ Group force ═══════════════════════════════════════════════════╗            SK4 │
│                ║   1 Atlas AS7-D                    SK4  Company 1 · Lance 1    ║            SK4 │
│                ║   2 Atlas AS7-D                    SK4  Company 1 · Lance 1    ║            SK4 │
│                ║   3 Atlas AS7-D                    SK4  Company 1 · Lance 1    ║                │
│                ║   4 Atlas AS7-D                    SK4  Company 1 · Lance 1    ║um vs TMM0)     │
│                ║   5 Atlas AS7-D                    SK4  Company 1 · Lance 2    ║                │
│                ║   6 Atlas AS7-D                    SK4  Company 1 · Lance 2    ║l               │
│                ║   7 Atlas AS7-D                    SK4  Company 1 · Lance 2    ║ 138            │
│                ║▶  8 Atlas AS7-D                    SK4  Company 1 · Lance 2    ║                │
│                ║                                                                ║                │
│                ║[↑↓] element   [←→] move between units   [n] split to new unit  ║                │
│                ║[f] new formation   [u] unassign   [s/S] skill ±   [x] remove   ║                │
│                ║[a] auto-group…   [Esc] done                                    ║                │
│                ╚════════════════════════════════════════════════════════════════╝                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
│                                │║                              ║│                                │
└────────────────────────────────┘╚══════════════════════════════╝└────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  t:to-hit  m:morale  n:round  e:done  g:group  r:rename  ,/.:form  ?:help
